--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="vertical-center">
       <div class="mx-auto">
-        <img src="img/avatar.png" class="" width="300px" alt="">
+        <img src="img/avatar.PNG" class="" width="300px" alt="">
       </div>
     </div>
 
