Change list margins, Added links in navigation

--- a/newList.html
+++ b/newList.html
@@ -28,21 +28,20 @@
     <!-- Buttons Bot -->
     <div class="flex-container fixed-bottom nav-bar">
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/notification.html">
+        <a class="nav-link" href="index.html">
           <i class="fas fa-home"></i>
         </a>
       </div>
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/list.html">
+        <a class="nav-link" href="newList.html">
           <i class="fas fa-plus"></i>
         </a>
       </div>
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/notification.html">
+        <a class="nav-link" href="list.html">
           <i class="fas fa-globe-americas"></i>
         </a>
       </div>
-    </div>
 
     <div class="vertical-center">
       <div class="mx-auto">
