--- a/list.html
+++ b/list.html
@@ -42,7 +42,7 @@
       </div>
     </div>
 
-    <div class="vertical-center">
+    <div class="container list-container">
       <div class="mx-auto">
         <ul class="list-group">
           <li class="list-group-item">My new todo list 1
@@ -77,17 +77,17 @@
 
     <div class="flex-container fixed-bottom nav-bar">
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/notification.html">
+        <a class="nav-link" href="index.html">
           <i class="fas fa-home"></i>
         </a>
       </div>
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/notification.html">
+        <a class="nav-link" href="newList.html">
           <i class="fas fa-plus"></i>
         </a>
       </div>
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/notification.html">
+        <a class="nav-link" href="list.html">
           <i class="fas fa-globe-americas"></i>
         </a>
       </div>
