--- a/list.html
+++ b/list.html
@@ -45,7 +45,7 @@
     <div class="container list-container">
       <div class="mx-auto">
         <ul class="list-group">
-          <li class="list-group-item">My new todo list 1
+          <li class="list-group-item">Neue ToDo Liate
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
             </div>
