Todo list is now in home view

--- a/index.html
+++ b/index.html
@@ -47,6 +47,38 @@
       </div>
     </div>
 
+    <div class="container list-container">
+      <div class="mx-auto">
+        <ul class="list-group">
+          <li class="list-group-item">Neue ToDo Liate
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
+          </li>
+          <li class="list-group-item">List 2
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
+          </li>
+          <li class="list-group-item">List 3
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
+          </li>
+          <li class="list-group-item">List 4
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
+          </li>
+          <li class="list-group-item">List 5
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <div class="flex-container fixed-bottom nav-bar">
       <div class="flex-item nav-icons">
         <a class="nav-link" href="index.html">
