--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>To The Do APP</title>
   </head>
   <body>
-    <div class="flex-container fixed-top nav-bar">
+    <div class="flex-container fixed-top nav-bar navbar-light "style="background-color: white;">
       <div class="flex-item nav-icons">
         <a class="nav-link" href="/notification.html">
           <i class="far fa-edit"></i>
@@ -50,7 +50,7 @@
     <div class="container list-container">
       <div class="mx-auto">
         <ul class="list-group">
-          <li class="list-group-item">Neue ToDo Liate
+          <li class="list-group-item">Neue ToDo Liste
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
             </div>
@@ -79,15 +79,25 @@
       </div>
     </div>
 
-    <div class="flex-container fixed-bottom nav-bar">
+    <div class="flex-container fixed-bottom nav-bar navbar-light "style="background-color: white;">
       <div class="flex-item nav-icons">
         <a class="nav-link" href="index.html">
           <i class="fas fa-home"></i>
         </a>
       </div>
       <div class="flex-item nav-icons">
+        <a class="nav-link" href="index.html">
+          <i>|</i>
+        </a>
+      </div>
+      <div class="flex-item nav-icons">
         <a class="nav-link" href="newList.html">
           <i class="fas fa-plus"></i>
+        </a>
+      </div>
+      <div class="flex-item nav-icons">
+        <a class="nav-link" href="index.html">
+          <i>|</i>
         </a>
       </div>
       <div class="flex-item nav-icons">
