--- a/newList.html
+++ b/newList.html
@@ -25,24 +25,6 @@
   </head>
   <body>
 
-    <!-- Buttons Bot -->
-    <div class="flex-container fixed-bottom nav-bar">
-      <div class="flex-item nav-icons">
-        <a class="nav-link" href="index.html">
-          <i class="fas fa-home"></i>
-        </a>
-      </div>
-      <div class="flex-item nav-icons">
-        <a class="nav-link" href="newList.html">
-          <i class="fas fa-plus"></i>
-        </a>
-      </div>
-      <div class="flex-item nav-icons">
-        <a class="nav-link" href="list.html">
-          <i class="fas fa-globe-americas"></i>
-        </a>
-      </div>
-
     <div class="vertical-center">
       <div class="mx-auto">
         <div class="title-newList">
@@ -52,6 +34,35 @@
           <input type="text" name="tfKategorie-newList" placeholder="Inhalt" maxlength="100">
           <button type="button" name="button">Fertig</button>
         </div>
+      </div>
+    </div>
+
+    <!-- Buttons Bot -->
+    <div class="flex-container fixed-bottom nav-bar navbar-light "style="background-color: white;">
+      <div class="flex-item nav-icons">
+        <a class="nav-link" href="index.html">
+          <i class="fas fa-home"></i>
+        </a>
+      </div>
+      <div class="flex-item nav-icons">
+        <a class="nav-link" href="/index.html">
+          <i>|</i>
+        </a>
+      </div>
+      <div class="flex-item nav-icons">
+        <a class="nav-link" href="/newList.html">
+          <i class="fas fa-plus"></i>
+        </a>
+      </div>
+      <div class="flex-item nav-icons">
+        <a class="nav-link" href="/index.html">
+          <i>|</i>
+        </a>
+      </div>
+      <div class="flex-item nav-icons">
+        <a class="nav-link" href="/discovery.html">
+          <i class="fas fa-globe-americas"></i>
+        </a>
       </div>
     </div>
 
