--- a/newList.html
+++ b/newList.html
@@ -25,12 +25,32 @@
   </head>
   <body>
 
+    <!-- Heading -->
+    <div class="flex-container fixed-top nav-bar navbar-light "style="background-color: white;">
+      <div class="flex-item nav-icons">
+        <a class="nav-link" href="/notification.html">
+          <br>
+          <i class="far fa-edit"></i>
+        </a>
+      </div>
+      <div class="flex-item nav-icons">
+        <br>
+        <br>
+        <h1 align="center">Liste<br>erstellen</h1>
+      </div>
+      <div class="flex-item nav-icons">
+        <a class="nav-link" href="/notification.html">
+          <br>
+          <i class="fas fa-ellipsis-v"></i>
+        </a>
+      </div>
+    </div>
+
     <!-- Content (Liste erstellen) -->
     <div class="vertical-center">
       <div class="mx-auto">
         <div class="title-newList">
-          <div class="mx-auto">
-            <h1>Liste erstellen</h1><br>
+          <div class="mx-auto" align="center">
             <select class="tfKategorie" name="Kategorie" maxlength="40" placeholder="Kategorie">
               <option value="Sport" disabled selected>Kategorie</option>
               <option value="Sport">Sport</option>
