--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="flex-container fixed-top nav-bar navbar-light "style="background-color: white;">
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/notification.html">
+        <a class="nav-link" href="/avatar.html">
           <i class="far fa-edit"></i>
         </a>
       </div>
@@ -89,7 +89,7 @@
         </a>
       </div>
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link">
           <i>|</i>
         </a>
       </div>
@@ -99,7 +99,7 @@
         </a>
       </div>
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link">
           <i>|</i>
         </a>
       </div>
