--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   <body>
     <div class="flex-container fixed-top nav-bar navbar-light "style="background-color: white;">
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/avatar.html">
+        <a class="nav-link" href="avatar.html">
           <i class="far fa-edit"></i>
         </a>
       </div>
       <div class="flex-item nav-icons">
       </div>
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/notification.html">
+        <a class="nav-link" href="notification.html">
           <i class="fas fa-ellipsis-v"></i>
         </a>
       </div>
