--- a/avatar.html
+++ b/avatar.html
@@ -76,7 +76,7 @@
         </a>
       </div>
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/newList.html">
+        <a class="nav-link" href="newList.html">
           <i class="fas fa-plus"></i>
         </a>
       </div>
@@ -86,7 +86,7 @@
         </a>
       </div>
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/discovery.html">
+        <a class="nav-link" href="discovery.html">
           <i class="fas fa-globe-americas"></i>
         </a>
       </div>
