--- a/newList.html
+++ b/newList.html
@@ -65,7 +65,7 @@
         </a>
       </div>
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/newList.html">
+        <a class="nav-link" href="newList.html">
           <i class="fas fa-plus"></i>
         </a>
       </div>
@@ -75,7 +75,7 @@
         </a>
       </div>
       <div class="flex-item nav-icons">
-        <a class="nav-link" href="/discovery.html">
+        <a class="nav-link" href="discovery.html">
           <i class="fas fa-globe-americas"></i>
         </a>
       </div>
